<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tv_add_expense_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:layout_margin="60dp"
        android:textSize="25sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/expense_name"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_add_expense_fragment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/expense_price"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_add_expense_fragment_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <!--TODO fill this spinner with data-->

    <Spinner
        android:id="@+id/spinner_add_expense_fragment"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:spinnerMode="dropdown"
        >
    </Spinner>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_expense_fragment_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape"
        android:text="@string/btn_add"/>

</LinearLayout>