<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tv_add_category_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:layout_margin="60dp"
        android:textSize="25sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/category_name"
        android:layout_marginBottom="50dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/category_name"
        android:layout_marginBottom="50dp">

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/et_add_category_fragment_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_category_fragment_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape"
        android:text="@string/btn_add"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_expenses_add_category_fragment"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        >

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>